# level3_recsys_finalproject-recsys-04

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  vueform.config.js
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: custom.md  새로운-기능-추가.md
CBF/: baseline_without_target_item.ipynb  data.py  feature_engineering.py  pyproject.toml  run.py
CBF/config/: CBF.yaml
CF/: MLProject  inference.py  train.py
CF/config/: AutoRec.yaml  EASE.yaml
CF/utils/: datasets.py  models.py  trainers.py  utils.py
airflow/dags/: coupang.py
airflow/dags/json/: headers.json
airflow/dags/src/: coupang_crawler.py
data/: 원두정보메타데이터_v2.csv
docs/: Coffee_Bean_Tables.md  Swagger&Redoc.md
mlflow_tracking_server/: CBF_test.sh  CF_test.sh  run_CF.sh  run_server.sh  serve_CBF.sh  serve_CBF_cold_O.sh  serve_CBF_cold_X.sh  serve_CF.sh
mlflow_tracking_server/CBF/: data.py  feature_engineering.py  predictor.py  run.py
mlflow_tracking_server/CBF-refactor/: MLProject  data.py  feature_engineering.py  predictor.py  run.py
mlflow_tracking_server/CBF/config/: CBF.yaml
mlflow_tracking_server/CF/: AutoRec.yaml  EASE.yaml  MLProject  datasets.py  models.py  run.py  trainers.py  utils.py
public/: index.html  test.avif
reconi-airflow/: README.md
reconi-airflow/airflow/: airflow.cfg  airflow.db  pyproject.toml
reconi-airflow/airflow/dags/: coupang.py  naver.py
reconi-airflow/airflow/dags/src/coupang/: coupang_crawler.py
reconi-airflow/airflow/dags/src/naver/: crawling_strategy.py  utils.py
reconi-backend/: .gitignore  LICENSE  README.md
reconi-backend/.github/ISSUE_TEMPLATE/: 버그-수정.md
reconi-backend/docs/: Install.md
reconi-backend/reconi_backend/: gunicorn.sh  reset_migration.sh
reconi-backend/reconi_backend/coffee_bean/: admin.py  apps.py  filters.py  middleware.py  serializers.py  thumbnail_indexing.py  urls.py
reconi-backend/reconi_backend/static/: staticfiles.json
reconi-backend/reconi_backend/user/: adapters.py  serializers.py  urls.py  views.py
reconi-frontend/: README.md  package.json
reconi-frontend/src/: router.js
reconi-frontend/src/components/: Login.vue  Main.vue  MainIntro.vue  MyPage.vue  TestResult.vue
reconi-model/CBF/: baseline.ipynb  data.py  run.py
reconi-model/CF/: inference.py  train.py
reconi-model/data/: merged_data.csv  remove_only_one_inters.ipynb  원두정보메타데이터.csv
reconi-model/mlflow_tracking_server/: CBF_test.sh  run_CBF.sh  run_CF.sh  serve_CBF.sh  serve_CF.sh
reconi_backend/: createsuperuser.sh  download_thumbnail.py  manage.py  migration_coffee_bean.sh
reconi_backend/coffee_bean/: admin.py  filters.py  middleware.py  models.py  serializers.py  urls.py  views.py
reconi_backend/reconi_backend/: asgi.py  settings.py  urls.py  wsgi.py
reconi_backend/user/: admin.py  forms.py  models.py  serializers.py
src/: App.vue  main.js  router.js
src/assets/: main.scss
src/components/: Card.vue  Footer.vue  Join.vue  Login.vue  MainIntro.vue  MainProductSample.vue  MainReconi.vue  MainReview.vue  MyPage.vue  NavVar.vue  ProductDetail.vue  Products.vue  TestPage.vue  TestResult.vue  style.css
(+20 files in other folders)
