[tool.poetry]
name = "recommendation-modeling"
version = "0.1.0"
description = ""
authors = ["limstonestone <ehus1118@gmail.com>"]
readme = "README.md"
packages = [{include = "recommendation_modeling"}]

[tool.poetry.dependencies]
python = "3.9.16"


[tool.poetry.group.dev.dependencies]
numpy = "^1.25.1"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
torch = "1.13.1"
tqdm = "^4.65.0"
scikit-learn = "^1.3.0"
jupyter-contrib-nbextensions = "^0.7.0"
seaborn = "^0.12.2"
scipy = "^1.11.1"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
