[tool.poetry]
name = "content-based filtering"
version = "0.1.0"
description = ""
authors = ["y2r1m <yerim22565974@gmail.com>"]
readme = "README.md"
packages = [{include = "content_based filtering"}]

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^6.24.0"

[tool.poetry.group.dev.dependencies]
numpy = "^1.25.1"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
keybert = "^0.7.0"
kiwipiepy = "^0.15.2"
transformers = "^4.30.2"
torch = "^1.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
