[tool.poetry]
name = "airflow"
version = "0.1.0"
description = ""
authors = ["sumin <ksum.jerry@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "1.23.2"


[tool.poetry.group.dev.dependencies]
pandas = "^2.1.0"
numpy = "^1.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
